--- a/src/components/box/table.hbs
+++ b/src/components/box/table.hbs
@@ -1,5 +1,3 @@
-
-<h4>テーブル default</h4>
 <table class="table">
   <caption>Table caption</caption>
   <thead>
@@ -9,138 +7,28 @@
     <th>Table Heading</th>
   </tr>
   </thead>
-  <tfoot>
-  <tr>
-    <td>Table Footer</td>
-    <td>Table Footer</td>
-    <td>Table Footer</td>
-  </tr>
-  </tfoot>
   <tbody>
   <tr>
     <td>Table Data</td>
     <td>Table Data</td>
     <td>Table Data</td>
   </tr>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
+  <tr class="center">
+    <td>Table Data (center)</td>
+    <td>Table Data (center)</td>
+    <td>Table Data (center)</td>
   </tr>
   <tr>
     <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
+    <td class="center">Table Data (center)</td>
+    <td class="right">Table Data (right)</td>
   </tr>
   </tbody>
-</table>
-
-<h4>テーブル striped</h4>
-
-<table class="table striped">
-  <caption>Table caption</caption>
-  <thead>
-  <tr>
-    <th>Table Heading</th>
-    <th>Table Heading</th>
-    <th>Table Heading</th>
-  </tr>
-  </thead>
   <tfoot>
-  <tr>
-    <td>Table Footer</td>
-    <td>Table Footer</td>
-    <td>Table Footer</td>
-  </tr>
+    <tr>
+        <td>Table Footer</td>
+        <td>Table Footer</td>
+        <td>Table Footer</td>
+    </tr>
   </tfoot>
-  <tbody>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  </tbody>
-</table>
-
-<h4>テーブル color</h4>
-<table class="table primary">
-  <caption>Table caption</caption>
-  <thead>
-  <tr>
-    <th>Table Heading</th>
-    <th>Table Heading</th>
-    <th>Table Heading</th>
-  </tr>
-  </thead>
-  <tfoot>
-  <tr>
-    <td>Table Footer</td>
-    <td>Table Footer</td>
-    <td>Table Footer</td>
-  </tr>
-  </tfoot>
-  <tbody>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  </tbody>
-</table>
-
-<h4>テーブル border</h4>
-
-<table class="table bordered">
-  <caption>Table caption</caption>
-  <thead>
-  <tr>
-    <th>Table Heading</th>
-    <th>Table Heading</th>
-    <th>Table Heading</th>
-  </tr>
-  </thead>
-  <tfoot>
-  <tr>
-    <td>Table Footer</td>
-    <td>Table Footer</td>
-    <td>Table Footer</td>
-  </tr>
-  </tfoot>
-  <tbody>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  <tr>
-    <td>Table Data</td>
-    <td>Table Data</td>
-    <td>Table Data</td>
-  </tr>
-  </tbody>
 </table>
